# libm2d

./: .gitignore  CMakeLists.txt  COPYING  Makefile  Makefile.am  README.md  blendtest.c  configure.ac  copytest.c  example.c  filltest.c  libm2d.pc.in  m2d.c  m2d.h  m2d_utils.c  m2d_utils.h  roptest.c
docs/: Doxyfile.in
include/drm/: microchip_drm.h
include/m2d/: m2d.h  utils.h  version.h.in
scripts/: git_version.sh
src/: CMakeLists.txt  Makefile.am  gfx2d.c  gitversion.h.in  m2d.c  m2d_priv.h  utils.c
test/: CMakeLists.txt  Makefile.am  blendtest.c  clear.sh  copytest.c  default.config  filltest.c  roptest.c  test.c  utils.c  utils.h
